# baby-monitor

./: .gitignore  README.md  check_camera.py  main.py  package-lock.json  pyproject.toml  setup.ps1  setup.sh  success.m4a
